Basic database structure created; test data inserted from index.ts.

--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -5,7 +5,7 @@
    "username": "n5if3v",
    "password": "n5if3vX?9",
    "database": "information_systems_handin",
-   "synchronize": true,
+   "synchronize": false,
    "logging": false,
    "entities": [
       "src/entity/**/*.ts"
